# kaaquote

./: .gitignore  Cargo.toml  Makefile  README.md  Rocket.toml
data/: .gitignore  episode1.html  sample.html  sample.json
quoter/: Cargo.toml
quoter/src/: builder.rs  lib.rs
src/: Rocket.toml  main.rs
src/searcher/: extractor.rs  mod.rs  scraper.rs  scrapper.rs
