[package]
name = "kaaquote"
version = "0.1.0"
authors = ["chris"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
regex = "1"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]

[dependencies.quoter]
path = "quoter"
