[package]
name = "kaaquote"
version = "0.1.0"
authors = ["ChristopheLecroq"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
rand = "0.7.2"
serde = "*"
serde_json = "*"
serde_derive = "*"
hyper = "0.12"
reqwest="0.9.22"
scraper = "0.11.0"
regex = "1"
lazy_static = "1.4.0"
percent-encoding = "2.1.0"
htmlescape = "0.3.1"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]